--- a/web/assets/css/cursos.css
+++ b/web/assets/css/cursos.css
@@ -21,11 +21,12 @@
     max-height: 179px;
     margin: 0 auto;
     margin-bottom: 2rem;
+    display: flex;
 }
 
 .container-fluid .row .col-12 .card .col-5 .container-image {
     width: 100%;
-    height: 179px;
+    height: 165px;
     position: relative;
     display: flex;
     justify-content: center;
@@ -33,10 +34,21 @@
 }
 
 .container-fluid .row .col-12 .card .col-5 .container-image img {
-    flex-shrink: 0;
+    
     max-height: 100%;
+    max-width: 100%;
 }
 
+
+/*width: 100%;
+    height: 165px;
+    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    overflow: hidden;
+min-height: 100%;
+    min-width: 100%;*/
 .container-fluid .row .col-12 .card .col-7 {
     padding: 1rem;
 }
@@ -62,6 +74,10 @@
     color: #b4b4b4;
     margin-top: 0.5rem;
     padding-right: 3rem;
+    min-width: 270px;
+    min-height: 80px;
+    display: flex;
+
 }
 
 .container-fluid .row .col-12 .card .col-7 .container-link {
@@ -71,11 +87,13 @@
     color: #33c6e7;
     margin-top: 1rem;
     text-decoration: none;
+    
 }
 
 .container-fluid .row .col-12 .card .col-7 .container-link a {
     text-decoration: none;
     color: #33c6e7;
+    text-align: justify;
 }
 
 @media (max-width: 1241px) {
