--- a/web/assets/css/cursos.css
+++ b/web/assets/css/cursos.css
@@ -34,11 +34,9 @@
 }
 
 .container-fluid .row .col-12 .card .col-5 .container-image img {
-    
     max-height: 100%;
     max-width: 100%;
 }
-
 
 /*width: 100%;
     height: 165px;
@@ -77,7 +75,6 @@ min-height: 100%;
     min-width: 270px;
     min-height: 80px;
     display: flex;
-
 }
 
 .container-fluid .row .col-12 .card .col-7 .container-link {
@@ -87,7 +84,6 @@ min-height: 100%;
     color: #33c6e7;
     margin-top: 1rem;
     text-decoration: none;
-    
 }
 
 .container-fluid .row .col-12 .card .col-7 .container-link a {
@@ -155,9 +151,7 @@ min-height: 100%;
     }
 }
 
-
 /* cursos */
-
 
 /* 
 .container-fluid .row .section-title-courses {
@@ -227,7 +221,6 @@ border-radius: 10px;
     text-decoration: none;
 }
 */
-
 
 /* BUTTON SEARCH */
 
@@ -343,7 +336,6 @@ border-radius: 10px;
     padding-right: 145px;
 }
 
-
 /*cartillas*/
 
 .container-fluid .row .section-title-courses {
@@ -364,7 +356,7 @@ border-radius: 10px;
 }
 
 .container-fluid .container-card-course .row .col-12 {
-    padding: .8rem;
+    padding: 0.8rem;
 }
 
 .container-fluid .container-card-course .row .col-12 .card {
@@ -378,7 +370,12 @@ border-radius: 10px;
     text-align: justify;
 }
 
-.container-fluid .container-card-course .row .col-12 .card .container-card-image {
+.container-fluid
+    .container-card-course
+    .row
+    .col-12
+    .card
+    .container-card-image {
     width: 100%;
     height: 165px;
     position: relative;
@@ -388,51 +385,83 @@ border-radius: 10px;
     overflow: hidden;
 }
 
-.container-fluid .container-card-course .row .col-12 .card .container-card-image img {
+.container-fluid
+    .container-card-course
+    .row
+    .col-12
+    .card
+    .container-card-image
+    img {
     min-height: 100%;
     min-width: 100%;
 }
 
-.container-fluid .container-card-course .row .col-12 .card .container-card-title {
+.container-fluid
+    .container-card-course
+    .row
+    .col-12
+    .card
+    .container-card-title {
     text-transform: uppercase;
     color: dimgray;
     font-family: "Inter", sans-serif;
     font-style: normal;
     font-weight: bold;
-    font-size: .8rem;
-    padding: .5rem;
-    height: 55px;
+    font-size: 0.8rem;
+    padding: 0.5rem 0.5rem;
+    /* height: 55px; */
 }
 
-.container-fluid .container-card-course .row .col-12 .card .container-card-description {
+.info {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    padding: 1rem 0;
+}
+
+.container-fluid
+    .container-card-course
+    .row
+    .col-12
+    .card
+    .container-card-description {
     color: gray;
     font-family: "Inter", sans-serif;
-    font-size: .8rem;
-    padding: 0 .5rem;
+    font-size: 0.8rem;
+    padding: 0.5rem;
     /*texto en dos lineas*/
     /* white-space: nowrap; */
-    overflow: hidden;
-    text-overflow: ellipsis;
-    display: -webkit-box;
+    /* overflow: hidden; */
+    /* text-overflow: ellipsis; */
+    /* display: -webkit-box;
     -webkit-box-orient: vertical;
-    -webkit-line-clamp: 2;
-    height: 39px;
+    -webkit-line-clamp: 2; */
 }
 
-.container-fluid .container-card-course .row .col-12 .card .container-card-link {
+.container-fluid
+    .container-card-course
+    .row
+    .col-12
+    .card
+    .container-card-link {
     font-family: "Inter", sans-serif;
-    font-size: .8rem;
+    font-size: 0.8rem;
     text-align: right;
     text-decoration: none;
     font-weight: bold;
-    padding: .5rem;
+    padding: 0.5rem;
 }
 
-.container-fluid .container-card-course .row .col-12 .card .container-card-link a {
+.container-fluid
+    .container-card-course
+    .row
+    .col-12
+    .card
+    .container-card-link
+    a {
     color: dimgray;
     margin-bottom: 1rem;
     text-decoration: none;
 }
-
 
 /*fin de cartillas*/
