--- a/web/assets/css/header.css
+++ b/web/assets/css/header.css
@@ -35,6 +35,7 @@ header {
   margin: 0 auto;
   display: flex;
   position: relative;
+
 }
 
 .logo-container {
@@ -305,6 +306,31 @@ header.btn.solid:hover {
   #check {
     display: block;
   }
+  @media (min-width: 1000px) {
+    .container-header {
+      max-width: 65rem;
+      padding: 1rem 2rem;
+      margin: 0 auto;
+      display: flex;
+      position: relative;
+      background-color:none;
+    }
+    }
+    @media (min-width: 320px) {
+      .container-header {
+        max-width: 65rem;
+        padding: 1rem 2rem;
+        margin: 0 auto;
+        display: flex;
+        position: relative;
+        background-color:#e7f4ff;
+        position: relative;
+    top: -10px;
+      }
+      }
+    
+
+
 
   .nav-btn-header {
     position: fixed;
