Centrar el contenido de los cursos modificando el tamaño del contenedor de los comentarios, posicionar correctamente el boton Comienza ahora y centrar el titulo Foro Educalma y el boton Comentar de los comentarios, Jesus Cacha

--- a/web/assets/css/styleforo.css
+++ b/web/assets/css/styleforo.css
@@ -634,4 +634,26 @@ body {
  }
 }
 
+@media (max-width: 767px) {
 
+   .comments-container{
+     width: auto !important;
+   }
+}
+ 
+@media (max-width: 767px) {
+
+   #btnComienzaAhora {
+      width: auto;
+
+      position: relative;
+      left: -10px;
+   }  
+}   
+
+#btnComentar2 {
+
+   /*Centrar botón*/
+   display: block; 
+   margin: 0 auto;
+ }
