--- a/web/assets/css/styledetcurso.css
+++ b/web/assets/css/styledetcurso.css
@@ -67,4 +67,16 @@
     display: block;
     width: 100%;
   }
+  .comments-container{
+    width: auto !important;
+  }
+}
+
+
+
+#btnComentar {
+
+  /*Centrar botón*/
+  display: block; 
+  margin: 0 auto;
 }
