--- a/web/assets/css/agrecursos.css
+++ b/web/assets/css/agrecursos.css
@@ -349,7 +349,7 @@ textarea {
     background: #5c5dc4;
     border: none;
     border-radius: 0px;
-    font-size: .9rem;
+    font-size: .8rem;
 }
 
 .active:focus {
@@ -362,9 +362,10 @@ form {
     margin: 0 auto;
     width: 100%;
     height: 100%;
+    
 }
 
-.list-group-item {
+.list-group-flush .list-group-item {
     color: #4F52D6;
     text-transform: uppercase;
     font-weight: bold;
@@ -387,6 +388,7 @@ form {
     outline: none;
     background: transparent;
     border: 1px solid #4F52D6;
+    
 }
 
 .form-control:focus {
