Programar mensaje de alerta en el boton COMIENZA AHORA del archivo CursoContenido.php, Jesus Cacha

--- a/web/assets/css/styleforo.css
+++ b/web/assets/css/styleforo.css
@@ -271,7 +271,7 @@ body {
   border-radius: 3px;
 }
 
-#btnComienzaAhora {
+#btnComienzaAhora_2 {
   width: auto;
 
   position: relative;
@@ -301,7 +301,7 @@ body {
      width: 320px;
   }
 
-  #btnComienzaAhora {
+  #btnComienzaAhora_2 {
     width: auto;
 
     position: relative;
